[Feat] 리소스 그룹 별 리소스 커스텀 필드 목록 조회 추가 수정
같은 필드 아이디를 가지는 필드 값들은 리스트로 묶어서 반환되도록 구현했습니다.